DocumentPrivate: Support auto bracket in block selection mode

..how it should be by adding brackets to each line of the block

- Ensure the new added brackets will never be part of the selection
- Encapsulate in editBegin/End
- Reduce if/else nesting which make this patch looking bad, sorry

There are still some issues with a mix of space/tabs and when apply
on line on a single line behind the end of line, see phab link.

BUG:382213
FIXED-IN: 5.58

Differential Revision: https://phabricator.kde.org/D19446